--- a/index.html
+++ b/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Jayesh Jibhade - Resume</title>
+  <title>Jayesh Bhade - SDE-2 | React.js, Next.js, Node.js | Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO META TAGS -->
+  <meta name="description" content="Resume of Jayesh Bhade - SDE-2 at Groww, specialized in React.js, Next.js, Node.js, advanced trading charts, chatbot development, and frontend system design.">
+  <meta name="keywords" content="Jayesh Bhade, Resume, SDE-2, Software Developer, React.js, Next.js, Node.js, Groww, Frontend Engineer, Trading Charts, Chatbot, Webview, Bangalore, India, Frontend System Design, Redux, Zustand, Monorepos, Microfrontend">
+  <meta name="author" content="Jayesh Bhade">
+  <meta property="og:title" content="Jayesh Bhade - Resume">
+  <meta property="og:description" content="Resume of Jayesh Bhade, SDE-2 at Groww. Specialist in advanced frontend development, React, Next.js, Node.js, trading platforms, and chatbot systems.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://resume.1two34.com/">
+  <meta property="og:image" content="https://resume.1two34.com/profile-image.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jayesh Bhade - Resume">
+  <meta name="twitter:description" content="Jayesh Bhade - Frontend SDE-2 at Groww, React.js/Next.js specialist. Download or view resume.">
+  <meta name="twitter:image" content="https://resume.1two34.com/profile-image.jpg">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- End SEO -->
+
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f4f6fa;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
@@ -19,13 +37,13 @@
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      padding: 24px 0 72px 0;
+      padding: 24px 0 84px 0;
     }
     .pdf-viewer {
       width: 80vw;
       height: 90vh;
-      box-shadow: 0 2px 24px rgba(0,0,0,0.16);
-      background: white;
+      box-shadow: 0 2px 24px rgba(0,0,0,0.12);
+      background: #fff;
       border-radius: 12px;
       overflow: hidden;
     }
@@ -36,27 +54,32 @@
       transform: translateX(-50%);
       background: #1a73e8;
       color: #fff;
-      padding: 14px 36px;
+      padding: 15px 40px;
       font-size: 18px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      box-shadow: 0 4px 16px rgba(26,115,232,0.16);
+      box-shadow: 0 4px 16px rgba(26,115,232,0.18);
       transition: background 0.2s;
-      z-index: 10;
+      z-index: 999;
+      font-weight: 600;
+      letter-spacing: 1px;
     }
     .download-btn:hover {
-      background: #1558b0;
+      background: #1761b0;
     }
-    @media (max-width: 600px) {
+    @media (max-width: 700px) {
       .pdf-viewer {
         width: 98vw;
-        height: 75vh;
+        height: 70vh;
       }
       .download-btn {
-        width: 90vw;
-        padding: 14px 0;
+        width: 94vw;
         font-size: 16px;
+        padding: 14px 0;
+      }
+      .resume-container {
+        padding-bottom: 94px;
       }
     }
   </style>
@@ -67,13 +90,42 @@
       class="pdf-viewer"
       src="JayeshBhade-Resume.pdf"
       frameborder="0"
-      title="Jayesh Jibhade Resume"
-    ></iframe>
+      title="Jayesh Bhade Resume"
+    >
+      <p>
+        This browser does not support PDF viewing. 
+        <a href="JayeshBhade-Resume.pdf" download>Download PDF</a>
+      </p>
+    </iframe>
   </div>
-  <a href="JayeshBhade-Resume.pdf" download>
-    <button class="download-btn">
-      Download Resume
-    </button>
-  </a>
+
+  <button class="download-btn" onclick="downloadPDF()">
+    Download Resume
+  </button>
+
+  <script>
+    function downloadPDF() {
+      // For cross-browser compatibility: force download using fetch + Blob
+      fetch('JayeshBhade-Resume.pdf')
+        .then(resp => {
+          if (!resp.ok) throw new Error('File not found');
+          return resp.blob();
+        })
+        .then(blob => {
+          const url = window.URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.style.display = 'none';
+          a.href = url;
+          a.download = 'JayeshBhade-Resume.pdf';
+          document.body.appendChild(a);
+          a.click();
+          window.URL.revokeObjectURL(url);
+        })
+        .catch(() => {
+          // fallback: open in new tab if download fails
+          window.open('JayeshBhade-Resume.pdf', '_blank');
+        });
+    }
+  </script>
 </body>
 </html>
