--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="twitter:title" content="Jayesh Bhade - Resume">
   <meta name="twitter:description" content="Jayesh Bhade - Frontend SDE-2 at Groww, React.js/Next.js specialist. Download or view resume.">
   <meta name="twitter:image" content="https://resume.1two34.com/profile-image.jpg">
+  <meta name="google-site-verification" content="sYo6E1ps4LDyq0Lb3YAcjBF7sEl7Uvnr0lH6DE0Y9IQ" />
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- End SEO -->
